<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.sh.changxing.selfkeepmycar.activity.MainActivity">

    <ImageView
        android:id="@+id/bk_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/cotent_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bottom_bk">
            <TextView
                android:id="@+id/tv_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home"
                android:gravity="center"
                android:drawableTop="@drawable/pic_home"/>
            <TextView
                android:id="@+id/tv_record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/record"
                android:gravity="center"
                android:drawableTop="@drawable/pic_record"/>
            <TextView
                android:id="@+id/tv_fuel_consumption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fuel_consumption"
                android:gravity="center"
                android:drawableTop="@drawable/pic_fuel"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
