<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.sh.changxing.selfkeepmycar.fragment.RecordFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/record_title_bk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/red"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/total_balance"/>
        <TextView
            android:id="@+id/expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:text="@string/total_expenses"/>
        <TextView
            android:id="@+id/receipts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/total_receipts"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/record_bk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
        <ExpandableListView
            android:id="@+id/record_ex_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

        </ExpandableListView>
    </RelativeLayout>

</LinearLayout>
