<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.sh.changxing.selfkeepmycar.fragment.HomeFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/home_bk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/title_layout_bk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/bt_download_from_Server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:visibility="gone"
                android:text="开始同步"/>
            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/red"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/total_balance"/>
            <TextView
                android:id="@+id/expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/total_expenses"/>
            <TextView
                android:id="@+id/receipts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/total_receipts"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/bt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/add_bk"
                android:text="添加养车记录"
                android:textColor="@color/blue"/>
           <Button
                android:id="@+id/bt_update_to_Server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/blue"
               android:visibility="gone"
                android:text="临时上传到服务器"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="以下为支出部分为模拟行驶油费支出，不含加油费，支出数据仅供参考，准确数据参照总支出"
                android:padding="10dp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="今日"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/today_fuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/av_fuel_consumption"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/today_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receipts"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/today_ex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="本周"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/week_fuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/av_fuel_consumption"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/week_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receipts"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/week_ex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="本月"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/month_fuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/av_fuel_consumption"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/month_re"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receipts"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/month_ex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
